[package]
name = "eclipse_phase_fake_id_generator"
version = "0.1.0"
authors = ["bartosz <bart.oleaczek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
serde = "1.0.103"
serde_json = "1.0.44"
rand = "0.7.2"
